fixed padding on mobile layout

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,7 +114,7 @@ a {
   }
   .main {
     margin-left: 0;
-    padding: 2%;
+    padding: 3%;
   }
 }
 
